# pure_webassembly_client

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  parcel.js
src/: app.rs  data.rs  lib.rs
src/components/: mod.rs  related_articles.rs
src/services/: data.rs  mod.rs  requests.rs
src/types/: mod.rs  package.rs
static/: index.html  main.css
