[package]
name = "pure_wasm_client_app"
version = "0.1.0"
authors = ["craig fay <craigfay1@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.14.3", features = ["std_web"] }
wasm-bindgen = "0.2"
serde = "1.0.104"
serde_json = "1.0.44"
thiserror = "1"
wee_alloc = "0.4.5"
web_logger = "0.2.0"
dotenv_codegen = "0.15.0"
log = "0.4.8"

